# tuiwave

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Queue.vcd
src/: app.rs  load_vcd.rs  log.rs  main.rs  timeseries.rs  ui.rs
