[package]
name         = "tuiwave"
version      = "0.1.0"
authors      = ["Toru Niina"]
edition      = "2021"
rust-version = "1.75"
description  = """
TUI waveform viewer.
"""
repository = "https://github.com/ToruNiina/tuiwave"
license    = "MIT"
categories = ["command-line-interface", "command-line-utilities", "visualization"]
keywords   = ["vcd", "waveform", "tui", "terminal"]

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
vcd = "0.7.0"
anyhow = "1.0.79"
